<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="activity_profile_name">Prenom</string>
    <string name="activity_profile_describe">A propos de moi</string>
    <string name="activity_profile_location">Ville</string>
    <string name="activity_profile_tel">00.00.00.00.00</string>
    <string name="activity_profile_fb">www.facebook.fr/prenom</string>
    <string name="toast_not_fav">Le voisin n\'est plus dans vos favoris</string>
    <string name="toast_fav">Le voisin à été ajouté dans vos favoris</string>
    <string name="activity_describe">Lorem Ipsum gsbqzedjhqsg jkqgzz zquid iuz gqiuzd gqzu gd zqiudg
        qiuz gduiqzgdiuegf uiezgf  uiezgfiz zeiuf zef zefz fzefzeuifgez i eizufg ze iezf ize fizuef
        gizuef giugqzsiu dgqsiu dgqsiugd iu</string>
</resources>
